--- a/css/layout.css
+++ b/css/layout.css
@@ -21,8 +21,21 @@
 .clear {
   clear: both;
 }
-.column1 {
-  
+.column_small {
+    float: left;
+    width: 33.33%;
+}
+
+.column_med {
+    float: left;
+    width: 66.66%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 /* Posititoning Classes */
 
