--- a/css/layout.css
+++ b/css/layout.css
@@ -22,6 +22,30 @@
   clear: both;
 }
 
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 /* Posititoning Classes */
-
+.column {
+  column-count: 3;
+  display: block;
+}
+.small {
+  width: 100%;
+  height: 100%;
+  float: left;
+}
+.medium {
+  width: 200%;
+  height: 200%;
+  float: left;
+}
+.large {
+  width: 200%;
+  height: 200%;
+  float: left;
+}
 
